apps/base/kek-redis/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kek-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kek-redis
  template:
    metadata:
      labels:
        app: kek-redis
    spec:
      containers:
      - name: kek-redis
        image: redis
        ports:
        - containerPort: 8080
