apps/base/kek-redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kek-redis
spec:
  selector:
    app: kek-redis
  ports:
  - port: 80
    targetPort: 8080
