apps/base/kek-redis/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kek-redis
spec:
  rules:
  - host: "change-me.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kek-redis
            port:
              number: 80
